-- ============================================================================
-- Distributed Job Scheduler — PostgreSQL Schema
-- ============================================================================
-- This file is the raw SQL mirror of the Prisma schema in backend/prisma/schema.prisma.
-- It is provided so reviewers can read the schema without Prisma, and so the
-- schema can be applied to a fresh database without the Prisma migration engine.
--
-- Conventions:
--   - All PKs are UUID, generated by the application (gen_random_uuid() fallback).
--   - All timestamps are TIMESTAMPTZ, default now().
--   - All FKs use ON DELETE CASCADE unless noted (preserve history where it matters).
--   - jsonb for semi-structured payload/result/config/metadata.
--   - Partial indexes where a predicate shrinks the index dramatically.
-- ============================================================================

-- Enable extensions
CREATE EXTENSION IF NOT EXISTS "pgcrypto";   -- gen_random_uuid()
CREATE EXTENSION IF NOT EXISTS "uuid-ossp";  -- uuid_generate_v4() fallback

-- ----------------------------------------------------------------------------
-- users
-- ----------------------------------------------------------------------------
CREATE TABLE users (
    id            UUID PRIMARY KEY DEFAULT gen_random_uuid(),
    email         TEXT NOT NULL UNIQUE,
    password_hash TEXT NOT NULL,
    name          TEXT NOT NULL,
    role          TEXT NOT NULL DEFAULT 'user'
                  CHECK (role IN ('admin', 'user')),
    created_at    TIMESTAMPTZ NOT NULL DEFAULT now()
);

CREATE INDEX idx_users_created_at ON users (created_at);

-- ----------------------------------------------------------------------------
-- organizations
-- ----------------------------------------------------------------------------
CREATE TABLE organizations (
    id          UUID PRIMARY KEY DEFAULT gen_random_uuid(),
    name        TEXT NOT NULL,
    slug        TEXT NOT NULL UNIQUE,
    owner_id    UUID NOT NULL REFERENCES users(id) ON DELETE RESTRICT,
    created_at  TIMESTAMPTZ NOT NULL DEFAULT now()
);

CREATE INDEX idx_organizations_owner_id ON organizations (owner_id);

-- ----------------------------------------------------------------------------
-- organization_members (M:N users <-> organizations, with role)
-- ----------------------------------------------------------------------------
CREATE TABLE organization_members (
    id              UUID PRIMARY KEY DEFAULT gen_random_uuid(),
    organization_id UUID NOT NULL REFERENCES organizations(id) ON DELETE CASCADE,
    user_id         UUID NOT NULL REFERENCES users(id) ON DELETE CASCADE,
    role            TEXT NOT NULL DEFAULT 'member'
                    CHECK (role IN ('owner', 'admin', 'member')),
    joined_at       TIMESTAMPTZ NOT NULL DEFAULT now(),
    UNIQUE (organization_id, user_id)
);

CREATE INDEX idx_org_members_user_id ON organization_members (user_id);

-- ----------------------------------------------------------------------------
-- projects
-- ----------------------------------------------------------------------------
CREATE TABLE projects (
    id              UUID PRIMARY KEY DEFAULT gen_random_uuid(),
    organization_id UUID NOT NULL REFERENCES organizations(id) ON DELETE CASCADE,
    name            TEXT NOT NULL,
    slug            TEXT NOT NULL,
    description     TEXT,
    is_active       BOOLEAN NOT NULL DEFAULT true,
    created_at      TIMESTAMPTZ NOT NULL DEFAULT now(),
    UNIQUE (organization_id, slug)
);

CREATE INDEX idx_projects_organization_id ON projects (organization_id);

-- ----------------------------------------------------------------------------
-- queues
-- ----------------------------------------------------------------------------
CREATE TABLE queues (
    id                UUID PRIMARY KEY DEFAULT gen_random_uuid(),
    project_id        UUID NOT NULL REFERENCES projects(id) ON DELETE CASCADE,
    name              TEXT NOT NULL,
    priority          INTEGER NOT NULL DEFAULT 0 CHECK (priority >= 0),
    concurrency_limit INTEGER NOT NULL DEFAULT 10 CHECK (concurrency_limit > 0),
    is_paused         BOOLEAN NOT NULL DEFAULT false,
    config            JSONB NOT NULL DEFAULT '{}'::jsonb,
    created_at        TIMESTAMPTZ NOT NULL DEFAULT now(),
    UNIQUE (project_id, name)
);

-- Partial index: only active (unpaused) queues are scanned by the scheduler.
CREATE INDEX idx_queues_active ON queues (project_id) WHERE is_paused = false;
CREATE INDEX idx_queues_priority ON queues (priority DESC);

-- ----------------------------------------------------------------------------
-- retry_policies (1:1 with queues)
-- ----------------------------------------------------------------------------
CREATE TABLE retry_policies (
    id             UUID PRIMARY KEY DEFAULT gen_random_uuid(),
    queue_id       UUID NOT NULL UNIQUE REFERENCES queues(id) ON DELETE CASCADE,
    strategy       TEXT NOT NULL DEFAULT 'exponential'
                   CHECK (strategy IN ('fixed', 'linear', 'exponential')),
    max_attempts   INTEGER NOT NULL DEFAULT 3 CHECK (max_attempts >= 0),
    base_delay_ms  INTEGER NOT NULL DEFAULT 1000 CHECK (base_delay_ms >= 0),
    max_delay_ms   INTEGER NOT NULL DEFAULT 60000 CHECK (max_delay_ms >= 0),
    created_at     TIMESTAMPTZ NOT NULL DEFAULT now(),
    CHECK (max_delay_ms >= base_delay_ms)
);

-- ----------------------------------------------------------------------------
-- workers
-- ----------------------------------------------------------------------------
CREATE TABLE workers (
    id            UUID PRIMARY KEY DEFAULT gen_random_uuid(),
    name          TEXT NOT NULL,
    hostname      TEXT NOT NULL,
    concurrency   INTEGER NOT NULL CHECK (concurrency > 0),
    status        TEXT NOT NULL DEFAULT 'active'
                  CHECK (status IN ('active', 'draining', 'dead')),
    registered_at TIMESTAMPTZ NOT NULL DEFAULT now(),
    last_seen_at  TIMESTAMPTZ NOT NULL DEFAULT now()
);

CREATE INDEX idx_workers_status ON workers (status);
CREATE INDEX idx_workers_last_seen ON workers (last_seen_at);

-- ----------------------------------------------------------------------------
-- jobs (the hot table)
-- ----------------------------------------------------------------------------
CREATE TABLE jobs (
    id              UUID PRIMARY KEY DEFAULT gen_random_uuid(),
    queue_id        UUID NOT NULL REFERENCES queues(id) ON DELETE CASCADE,
    type            TEXT NOT NULL
                    CHECK (type IN ('immediate', 'delayed', 'scheduled', 'recurring', 'batch')),
    status          TEXT NOT NULL DEFAULT 'queued'
                    CHECK (status IN ('queued', 'scheduled', 'claimed', 'running', 'completed', 'failed', 'retry', 'dead')),
    priority        INTEGER NOT NULL DEFAULT 0 CHECK (priority >= 0),
    payload         JSONB NOT NULL DEFAULT '{}'::jsonb,
    result          JSONB,
    error           TEXT,
    attempts        INTEGER NOT NULL DEFAULT 0 CHECK (attempts >= 0),
    worker_id       UUID REFERENCES workers(id) ON DELETE SET NULL,
    run_at          TIMESTAMPTZ NOT NULL DEFAULT now(),
    claimed_at      TIMESTAMPTZ,
    started_at      TIMESTAMPTZ,
    finished_at     TIMESTAMPTZ,
    idempotency_key TEXT,
    created_at      TIMESTAMPTZ NOT NULL DEFAULT now()
);

-- THE claim index: partial, ordered for SKIP LOCKED polling.
-- Only 'queued' rows are claimable, so we index only those.
CREATE INDEX idx_jobs_claim
    ON jobs (queue_id, priority DESC, run_at)
    WHERE status = 'queued';

CREATE INDEX idx_jobs_status ON jobs (status);
CREATE INDEX idx_jobs_created_at ON jobs (created_at);

-- Idempotency: unique per queue, but only when a key is provided.
CREATE UNIQUE INDEX idx_jobs_idempotency
    ON jobs (queue_id, idempotency_key)
    WHERE idempotency_key IS NOT NULL;

-- ----------------------------------------------------------------------------
-- job_executions (one row per attempt — the retry history)
-- ----------------------------------------------------------------------------
CREATE TABLE job_executions (
    id              UUID PRIMARY KEY DEFAULT gen_random_uuid(),
    job_id          UUID NOT NULL REFERENCES jobs(id) ON DELETE CASCADE,
    worker_id       UUID REFERENCES workers(id) ON DELETE SET NULL,
    attempt_number  INTEGER NOT NULL CHECK (attempt_number >= 1),
    status          TEXT NOT NULL CHECK (status IN ('success', 'failed')),
    duration_ms     INTEGER NOT NULL DEFAULT 0 CHECK (duration_ms >= 0),
    error           TEXT,
    started_at      TIMESTAMPTZ NOT NULL,
    finished_at     TIMESTAMPTZ,
    UNIQUE (job_id, attempt_number)
);

CREATE INDEX idx_executions_job_id ON job_executions (job_id);
CREATE INDEX idx_executions_worker_started ON job_executions (worker_id, started_at);

-- ----------------------------------------------------------------------------
-- job_logs
-- ----------------------------------------------------------------------------
CREATE TABLE job_logs (
    id         UUID PRIMARY KEY DEFAULT gen_random_uuid(),
    job_id     UUID NOT NULL REFERENCES jobs(id) ON DELETE CASCADE,
    level      TEXT NOT NULL DEFAULT 'info'
               CHECK (level IN ('debug', 'info', 'warn', 'error')),
    message    TEXT NOT NULL,
    metadata   JSONB NOT NULL DEFAULT '{}'::jsonb,
    created_at TIMESTAMPTZ NOT NULL DEFAULT now()
);

CREATE INDEX idx_logs_job_created ON job_logs (job_id, created_at);
CREATE INDEX idx_logs_level ON job_logs (level);

-- ----------------------------------------------------------------------------
-- worker_heartbeats (time-series)
-- ----------------------------------------------------------------------------
CREATE TABLE worker_heartbeats (
    id          UUID PRIMARY KEY DEFAULT gen_random_uuid(),
    worker_id   UUID NOT NULL REFERENCES workers(id) ON DELETE CASCADE,
    active_jobs INTEGER NOT NULL DEFAULT 0 CHECK (active_jobs >= 0),
    cpu_percent INTEGER NOT NULL DEFAULT 0 CHECK (cpu_percent >= 0),
    memory_mb   INTEGER NOT NULL DEFAULT 0 CHECK (memory_mb >= 0),
    created_at  TIMESTAMPTZ NOT NULL DEFAULT now()
);

CREATE INDEX idx_heartbeats_worker_created ON worker_heartbeats (worker_id, created_at);
CREATE INDEX idx_heartbeats_created ON worker_heartbeats (created_at);

-- ----------------------------------------------------------------------------
-- scheduled_jobs (1:1 with jobs of type scheduled/delayed/recurring)
-- ----------------------------------------------------------------------------
CREATE TABLE scheduled_jobs (
    id           UUID PRIMARY KEY DEFAULT gen_random_uuid(),
    job_id       UUID NOT NULL REFERENCES jobs(id) ON DELETE CASCADE,
    cron_expr    TEXT,
    next_run_at  TIMESTAMPTZ NOT NULL DEFAULT now(),
    last_run_at  TIMESTAMPTZ,
    is_active    BOOLEAN NOT NULL DEFAULT true
);

-- Partial index: only active scheduled jobs are scanned by the scheduler tick.
CREATE INDEX idx_scheduled_next_run
    ON scheduled_jobs (next_run_at)
    WHERE is_active = true;

-- ----------------------------------------------------------------------------
-- dead_letter_queue
-- ----------------------------------------------------------------------------
CREATE TABLE dead_letter_queue (
    id         UUID PRIMARY KEY DEFAULT gen_random_uuid(),
    job_id     UUID NOT NULL REFERENCES jobs(id) ON DELETE CASCADE,
    queue_id   UUID NOT NULL REFERENCES queues(id) ON DELETE CASCADE,
    reason     TEXT NOT NULL,
    payload    JSONB NOT NULL DEFAULT '{}'::jsonb,
    attempts   INTEGER NOT NULL DEFAULT 0 CHECK (attempts >= 0),
    moved_at   TIMESTAMPTZ NOT NULL DEFAULT now()
);

CREATE INDEX idx_dlq_queue_id ON dead_letter_queue (queue_id);
CREATE INDEX idx_dlq_moved_at ON dead_letter_queue (moved_at);

-- ----------------------------------------------------------------------------
-- queue_stats (denormalized rollup, 1:1 with queues)
-- ----------------------------------------------------------------------------
CREATE TABLE queue_stats (
    id                  UUID PRIMARY KEY DEFAULT gen_random_uuid(),
    queue_id            UUID NOT NULL UNIQUE REFERENCES queues(id) ON DELETE CASCADE,
    total_jobs          INTEGER NOT NULL DEFAULT 0 CHECK (total_jobs >= 0),
    queued              INTEGER NOT NULL DEFAULT 0 CHECK (queued >= 0),
    running             INTEGER NOT NULL DEFAULT 0 CHECK (running >= 0),
    completed           INTEGER NOT NULL DEFAULT 0 CHECK (completed >= 0),
    failed              INTEGER NOT NULL DEFAULT 0 CHECK (failed >= 0),
    dead_lettered       INTEGER NOT NULL DEFAULT 0 CHECK (dead_lettered >= 0),
    avg_duration_ms     NUMERIC(12,2) NOT NULL DEFAULT 0,
    throughput_per_min  NUMERIC(12,2) NOT NULL DEFAULT 0,
    updated_at          TIMESTAMPTZ NOT NULL DEFAULT now()
);

-- ============================================================================
-- End of schema
-- ============================================================================
